--- a/src/style/components.css
+++ b/src/style/components.css
@@ -46,18 +46,18 @@
     font-weight: bold;
 }
 
-.load-more-btn{
+.load-more-btn {
     width: 200px;
 }
 
 .movies {
     width: 100%;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     align-items: center;
 }
 
-.movie-list{
+.movie-list {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -66,7 +66,7 @@
     flex: 1;
 }
 
-.movie-card{
+.movie-card {
     height: auto;
     width: 70%;
     display: flex;
@@ -79,74 +79,93 @@
     margin: 0 10px;
 }
 
-.poster{
+.poster {
     width: 40%;
     text-align: center;
 }
 
 img {
-  max-height: 100%;
-  max-width: 100%;
-  object-fit: contain;
- /* opacity: 0.5;*/
-  transition: 1000ms;
-  cursor: pointer;
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: contain;
+    /* opacity: 0.5;*/
+    transition: 1000ms;
+    cursor: pointer;
 }
 
-.details{
+.details {
     width: 60%;
 }
 
-p{
+p {
     margin-bottom: 15px;
 }
 
-.title{
+.title {
     font-size: 1.6rem;
-    font-weight: bold;  
+    font-weight: bold;
 }
 
-.release-date{
+.release-date {
     font-size: 1.3rem;
     font-weight: bold;
 }
 
-.loader-container{
+.loader-container {
     position: absolute;
-    top:50%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%,-50% );
+    transform: translate(-50%, -50%);
 }
 
 .loader {
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  border: 8px solid;
-  border-color: #000 #0000;
-  animation: rotation 1.5s infinite;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    border: 8px solid;
+    border-color: #000 #0000;
+    animation: rotation 1.5s infinite;
 }
 
 @keyframes rotation {
-    to {transform: rotate(1turn)};
+    to {
+        transform: rotate(1turn)
+    }
+
+    ;
 }
 
-.scroll-sentinel{
+.scroll-sentinel {
     height: 20px;
     width: 90%;
 }
 
-.visible{
+.visible {
     transform: translateX(0);
     opacity: 1;
 }
 
 
-.casts{
-      font-size: 1.2rem;
-    }
-    .see-more{
-    font-weight: bold;  
-    font-size: 1rem;
-    cursor: pointer;
+.character-name{
+    font-weight: bold;
 }
+
+.cast-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.cast-item {
+    opacity: 0; /* kezdetben láthatatlan */
+    transform: translateY(10px); /* kicsit lejjebb */
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out; /* animáció */
+    margin-top: 5px;
+}
+
+/* Amikor visible class hozzáadódik, animáció indul */
+.cast-item.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
