--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 #root {
   margin: 0 auto; 
   display: flex;
-  justify-content: center;
+  justify-content: center; 
+  width: 100%;
+  min-height: 100vh;
 }
